# oops

./: .gitignore  CEO_FINAL_REPORT.md  CHANGES_SUMMARY.md  CI_FINAL_STATUS.md  CI_FIX_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FINAL_CI_RESOLUTION.md  IMPLEMENTATION_REPORT.md  INDEPENDENT_VERIFICATION_REPORT.md  LICENSE  MSRV_FIX_SUMMARY.md  PR_APPROVAL_FIX_SUMMARY.md  README.md  RELEASE_FIX_SUMMARY.md  RELEASE_WORKFLOW_FIX.md  SOLUTION_SUMMARY.md  SUMMARY.md  VERIFICATION_SUMMARY.md  VERSION_BUMP_CHANGE_SUMMARY.md  WORKFLOW_CHANGE_VERIFICATION.md  WORKFLOW_FAILURE_DIAGNOSIS.md  WORKFLOW_FIX_FINAL_SUMMARY.md  WORKFLOW_FIX_IMPLEMENTATION.md  WORKFLOW_FIX_SUMMARY.md  YAML_VALIDATION_NOTE.md  rustfmt.toml  test-release-workflow-fix.sh  test-release-workflow.sh  test-version-bump.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  WORKFLOWS_GUIDE.md  copilot-instructions.md  dependabot.yml
benches/: benchmarks.rs
docs/: AUTOMATED_RELEASES.md  MANUAL_BUILD_WORKFLOW.md  MSRV_NOTES.md  QUICK_RELEASE_GUIDE.md  README.md  RELEASE_PAT_SETUP.md  RELEASE_VERIFICATION.md  RELEASE_WORKFLOW_FIX.md  RELEASE_WORKFLOW_QA.md  TESTING_AUTO_RELEASE.md  VERSION_BUMP_IMPLEMENTATION.md  auto-release-improvements.md  auto-release-workflow.md
scripts/: check-parity.sh  ci_local.sh  fix_shell_aliases.ps1  install.ps1  install.sh  rename.ps1  test-build-and-release-workflow.sh  test-release-verification.sh  validate-workflow-change.sh  validate_ci_fixes.sh  verify-msrv.sh
site/: 404.html  index.html  robots.txt  sitemap.xml
src/: cli.rs  lib.rs  main.rs  test_utils.rs
tests/: check_parity_test.rs  cli_tests.rs  docs_structure.rs  parity_tests.rs  scripts_structure.rs  structure_tests.rs
(+152 files in other folders)
